objects/Branch__c.object
<CustomObject>
    <fields>
        <fullName>Branch_Names__c</fullName>
        <label>Branch Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HOD_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HOD Name</label>
        <referenceTo>Faculty__c</referenceTo>
        <relationshipLabel>Branches</relationshipLabel>
        <relationshipName>Branches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_of_Sections__c</fullName>
        <label>No of Sections</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Students__c</fullName>
        <label>No of Students</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Branch</label>
    <nameField>
        <label>Branch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Branches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>